--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,13 @@
 # Site settings
-title: Lokmont
-description: Lokmont is a responsive simple theme for Jekyll.
+title: Daman Yang
+description: B.S. in Mechanical Engineering, Northeastern University
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://lokmont-jekyll.netlify.com/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner Section
-hero: 112.jpg
-hero-title: Welcome to Lokmont
-hero-description: A Responsive Jekyll Blog Theme. Theme suitable for any kind of creators.
-
-# Author - Creator
-author-name: Ben Campbell
-author-image: 10.jpg
-about-author: My name is Ben Campbell. I'm an actor and a musician. Retro wolf banjo succulen tsgoch ujang tumeric hammock offal.
-author-email: help.example@gmail.com
-author-twitter: https://twitter.com/
-author-facebook: https://twitter.com/
-author-instagram: https://www.instagram.com/
-author-pinterest: https://pinterest.com/
-
-# Other Authors - here you can add Other authors. For example Natali_Braxton
-authors:
-  Natali_Braxton:
-    author-name: Natali Braxton
-    author-image: 111.jpg
-    about-author: My name is Natali Braxton. I love walking, I play the guitar in my spare time. And also write articles about different technologies.
-    author-email: natali.example@gmail.com
-    author-twitter: https://twitter.com/
-    author-facebook: https://twitter.com/
-    author-instagram: https://www.instagram.com/
-    author-pinterest: https://pinterest.com/
+hero: boston-skyline-metropolis.jpg
+hero-title: Daman (Shao-Hung) Yang
+hero-description: B.S. in Mechanical Engineering, Northeastern University
 
 # Social Media Links (Links are located in hero and footer)
 twitter: https://twitter.com/
@@ -38,6 +16,7 @@ google-plus: https://plus.google.com/
 instagram: https://www.instagram.com/
 pinterest: https://pinterest.com/
 youtube: https://www.youtube.com/
+linkedin: https://www.linkedin.com/in/shao-hung-yang-8bb5a11b5/
 
 # Contact Form Settings
 contact-subtitle: Pok pok listicle meggings, gluten-free deep v you probably haven't heard of them taxidermy iPhone gentrify seitan. Kogi cornhole enamel. # Title for the subscription form.
